// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderMarkdown states > invalid-data: input, problem and fix 1`] = `
"<!-- coverage-insight -->

## ⚠️ Coverage report error

_PR #42_

### ⚙️ What went wrong

> [!WARNING]
> **\`head\`** — corrupt JSON
>
> 🛠️ **Fix:** check the artifact path

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > monorepo: per-project verdict rows 1`] = `
"<!-- coverage-insight -->

## 📦 Monorepo coverage

_PR #42_

### Projects

| Project | Status | Lines | Δ |
| --- | --- | ---: | ---: |
| pkg-a | ✅ passed | 90.0% | +10.0 |
| pkg-b | ❌ gate failed | 90.0% | +10.0 |

<details>
<summary>pkg-a — 0 files</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |

</details>

<details>
<summary>pkg-b — 0 files</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > no-baseline: absolute numbers only 1`] = `
"<!-- coverage-insight -->

## ℹ️ Baseline recorded

_PR #42_

> [!NOTE]
> No baseline was found — absolute coverage only. Deltas will appear once the next baseline run records one.

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** | 9/10 |
| 🟢 | Branches | **90.0%** | 9/10 |
| 🟢 | Functions | **90.0%** | 9/10 |
| 🟢 | Lines | **90.0%** | 9/10 |

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% | 90.0% | 90.0% | 90.0% | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > no-change: single-line minimal comment 1`] = `
"<!-- coverage-insight -->
✅ Coverage unchanged"
`;

exports[`renderMarkdown states > passed: verdict first line after the D5 marker 1`] = `
"<!-- coverage-insight -->

## ✅ Coverage gate passed

_PR #42_

| Statements | Branches | Functions | Lines |
| :-: | :-: | :-: | :-: |
| 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) |
| <sub>9/10 covered</sub> | <sub>9/10 covered</sub> | <sub>9/10 covered</sub> | <sub>9/10 covered</sub> |

<details>
<summary>📊 Coverage report — this PR vs base branch</summary>

**Current PR**

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Branches | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Functions | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Lines | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |

**Base branch**

| St. | Category | Percentage |
| :-: | --- | --- |
| 🟢 | Statements | **80.0%** |
| 🟢 | Branches | **80.0%** |
| 🟢 | Functions | **80.0%** |
| 🟢 | Lines | **80.0%** |

</details>

<details open>
<summary>✏️ Changed files (1 of 1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > regression: severity badges 1`] = `
"<!-- coverage-insight -->

## 🔻 Coverage regression

_PR #42_

| Statements | Branches | Functions | Lines |
| :-: | :-: | :-: | :-: |
| 🔴 **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 🔴 **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 🔴 **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 🔴 **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) |
| <sub>2/10 covered</sub> | <sub>2/10 covered</sub> | <sub>2/10 covered</sub> | <sub>2/10 covered</sub> |

### 🔻 Coverage regressions — 1 file _(sorted by impact)_

_Files where this PR reduced coverage. Ratchet policy treats these as violations even when the project threshold is still met._

- **\`src/a.ts\`** — 🔴 critical
  statements 80.0 → 20.0 (−60.0) · branches 80.0 → 20.0 (−60.0) · functions 80.0 → 20.0 (−60.0) · lines 80.0 → 20.0 (−60.0)

> [!IMPORTANT]
> 🔴 critical: drop > 5pp or below a path threshold · 🟡 warning: any decrease

<details>
<summary>📊 Coverage report — this PR vs base branch</summary>

**Current PR**

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🔴 | Statements | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 2/10 |
| 🔴 | Branches | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 2/10 |
| 🔴 | Functions | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 2/10 |
| 🔴 | Lines | **20.0%** ($\\color{red}{\\textsf{-60.00\\%}}$ ▼) | 2/10 |

**Base branch**

| St. | Category | Percentage |
| :-: | --- | --- |
| 🟢 | Statements | **80.0%** |
| 🟢 | Branches | **80.0%** |
| 🟢 | Functions | **80.0%** |
| 🟢 | Lines | **80.0%** |

</details>

<details open>
<summary>✏️ Changed files (1 of 1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🔴 | \`src/a.ts\` | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | — |

</details>

<details>
<summary>🔻 Show files with reduced coverage (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🔴 | \`src/a.ts\` | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | — |

</details>

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🔴 | \`src/a.ts\` | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | 20.0% −60.0 | — |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > tests-failed: merge-blocked alert, named failures, PR-only coverage 1`] = `
"<!-- coverage-insight -->

## 🛑 Tests failed — report in failure mode

_PR #42_

> [!CAUTION]
> **1 test of 5 failed** — the check is marked \`failure\`, so the PR cannot merge until the test run passes.

| ❌ Failed | 🧪 Total |
| :-: | :-: |
| **1** | **5** |

### ❌ Failed tests

<details open>
<summary>🔴 <code>src/a.test.ts</code> — 1 failed test</summary>

- ❌ **boom**

</details>

> [!NOTE]
> Coverage below is from this PR's failed run and may be partial — the coverage gate is deferred until tests pass.

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** | 9/10 |
| 🟢 | Branches | **90.0%** | 9/10 |
| 🟢 | Functions | **90.0%** | 9/10 |
| 🟢 | Lines | **90.0%** | 9/10 |

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`renderMarkdown states > threshold-failed: compliance table and shortest path to green 1`] = `
"<!-- coverage-insight -->

## ❌ Coverage gate failed \`blocks merge\`

_PR #42_

| Statements | Branches | Functions | Lines |
| :-: | :-: | :-: | :-: |
| 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 🟢 **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) |
| <sub>9/10 covered</sub> | <sub>9/10 covered</sub> | <sub>9/10 covered</sub> | <sub>9/10 covered</sub> |

### Threshold compliance

| Metric | Required | PR | Gap | Status |
| --- | ---: | ---: | ---: | --- |
| Lines | 90% | 90.0% | ±0.0 | ✅ pass |

### Shortest path to green — smallest set of files that closes the gap

| File | Uncovered | Impact |
| --- | --- | --- |
| \`src/a.ts\` | 1 uncovered line | closes the full 10.0pp lines gap |

<details>
<summary>📊 Coverage report — this PR vs base branch</summary>

**Current PR**

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Branches | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Functions | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Lines | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) — required 90% | 9/10 |

**Base branch**

| St. | Category | Percentage |
| :-: | --- | --- |
| 🟢 | Statements | **80.0%** |
| 🟢 | Branches | **80.0%** |
| 🟢 | Functions | **80.0%** |
| 🟢 | Lines | **80.0%** |

</details>

<details open>
<summary>✏️ Changed files (1 of 1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;

exports[`visuals modes > images: <picture> with light/dark variants, plus mermaid 1`] = `
"<!-- coverage-insight -->

## ✅ Coverage gate passed

_PR #42_

<picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://raw.test/d.svg">
  <img alt="coverage metrics: value, covered/total, delta and trend per metric" src="https://raw.test/l.svg">
</picture>

<details>
<summary>📊 Coverage report — this PR vs base branch</summary>

**Current PR**

| St. | Category | Percentage | Covered / Total |
| :-: | --- | --- | ---: |
| 🟢 | Statements | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Branches | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Functions | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |
| 🟢 | Lines | **90.0%** ($\\color{green}{\\textsf{+10.00\\%}}$ ▲) | 9/10 |

**Base branch**

| St. | Category | Percentage |
| :-: | --- | --- |
| 🟢 | Statements | **80.0%** |
| 🟢 | Branches | **80.0%** |
| 🟢 | Functions | **80.0%** |
| 🟢 | Lines | **80.0%** |

</details>

<details open>
<summary>✏️ Changed files (1 of 1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

<details>
<summary>📈 Coverage trend — lines % (last 3 baselines)</summary>

\`\`\`mermaid
xychart-beta
  x-axis ["a1", "b2", "c3"]
  y-axis "lines %" 75 --> 100
  line [80.0, 85.0, 90.0]
\`\`\`

</details>

<details>
<summary>📋 Full coverage table (1)</summary>

| St. | File | Statements | Branches | Functions | Lines | Uncovered |
| :-: | --- | ---: | ---: | ---: | ---: | --- |
| 🟢 | \`src/a.ts\` | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 90.0% +10.0 | 4 |

</details>

---

_Report generated by [coverage-insight](https://github.com/subhashmahimaluri/vite-pr-coverage-insight)_"
`;
